header and side bar redone

--- a/tavily.ipynb
+++ b/tavily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "## querying AI model\n",
     "\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,16 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 32a680bc-0967-491f-9490-bcb857e66314<br>**Similarity:** 0.8837554768351307<br>**Text:** The Present Study\n",
-       "Parent involvement is one factor that has been consistently related to a child's increased academic performance (Hara & Burke, 1998; Hill & Craft, 2003; Marcon, 1999; Stevenson & Baker, 1987). While this relation between parent involvement and a child's academic performance is well established, studies have yet to examine how parent involvement increases a child's academic performance. The goal of the present study was to test two variables that may mediate, or explain how, parent involvement is related to a child's academic performance. Parent involvement was defined as the teacher's perception of “the positive attitude parents have towards their child's education, teacher, and school” (Webster-Stratton, 1998). Academic performance was measured by two methods: standardized achievement test scores and teacher report of academic performance through rating scales. Based on previous research (Gonzalez-DeHass et al., 2005; Hughes et al., 2005), two possible mechanisms, a child's perception of cognitive competence as measured by the child's report, and the student-teacher relationship as measured by the teacher's report, were examined for their ability to mediate the relation between parent involvement and academic performance. It was predicted that parent involvement would no longer be a significant predictor of a child's academic performance when the child's cognitive competence and the student-teacher relationship were accounted for in the analyses.\n",
-       "Method\n",
-       "...<br>"
+       "**Node ID:** 6f8ad8f4-aa56-489c-b66c-81710a617d9b<br>**Similarity:** 0.895583089618943<br>**Text:** By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance. While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
+       "Models of Parent Involvement\n",
+       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000). The distinction between the activities parents partake in and the attitude parents have towards education was highlighted by several recent studies.<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -138,62 +146,53 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 37f1c271-cbbc-4ee8-9d98-7f5c4b8730e0<br>**Similarity:** 0.8793828117553203<br>**Text:** Here are five takeaways from the research.\n",
+       "**Node ID:** 94ca789d-3f3a-4b51-8fee-eb318c707a6e<br>**Similarity:** 0.8857707416042999<br>**Text:** Therefore, it is important to examine factors that contribute to early academic success and that are amenable to change.\n",
+       "Researchers have reported that parent-child interactions, specifically stimulating and responsive parenting practices, are important influences on a child's academic development (Christian, Morrison, & Bryant, 1998; Committee on Early Childhood Pedagogy, 2000). By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance. While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
+       "Models of Parent Involvement\n",
+       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000).<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 8d2dc076-f878-48eb-b177-2df9b50f93be<br>**Similarity:** 0.8823156343871914<br>**Text:** Further, parent involvement was significantly related to academic performance above and beyond the impact of the child's intelligence (IQ), a variable not accounted for in previous research.\n",
+       "Findings from the present study demonstrated that increased parent involvement is significantly related to a child's increased perception of cognitive competence. This finding is consistent with previous studies (Gonzalez-DeHass, Willems, & Holbein, 2005; Grolnick, Ryan, & Deci, 1991). While outside the scope of the present study, it is conceivable that parent involvement may influence the child's perception of cognitive competence by means described by Bandura (1977). Findings demonstrated that increased parent involvement was significantly related to increased quality of the student-teacher relationship. Findings also demonstrated that increased perceived cognitive competence was related to higher achievement test scores and that the quality of the student-teacher relationship was significantly related to the child's academic performance, measured by both standardized achievement test scores and the child's classroom academic performance.<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 27ac7a53-aa5f-417f-991a-80aa3cac81ee<br>**Similarity:** 0.8802547576874705<br>**Text:** While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
+       "Models of Parent Involvement\n",
+       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000). The distinction between the activities parents partake in and the attitude parents have towards education was highlighted by several recent studies. Several studies found that increased frequency of activities was associated with higher levels of child misbehavior in the classroom (Izzo, Weissberg, Kasprow, & Fendrich, 1999), whereas positive attitudes towards education and school were associated with the child's increased academic performance (Rimm-Kaufman, Pianta, Cox, & Bradley, 2003).<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 109c3238-79cb-420a-be66-9f4e6b2f961f<br>**Similarity:** 0.8797144884821717<br>**Text:** Here are five takeaways from the research.\n",
        "1. Studies show more parental involvement leads to improved academic outcomes\n",
        "When parents are involved in their children’s schooling, students show higher academic achievement, school engagement, and motivation, according to a 2019 American Psychological Association review of 448 independent studies on parent involvement.\n",
        "A 2005 study from researchers at the Johns Hopkins University Center on School, Family and Community Partnerships, for example, showed that school practices encouraging families to support their child’s math learning at home led to higher percentages of students scoring at or above proficiency on standardized math tests.\n",
-       "And research shows that parent involvement with reading activities has a positive impact on reading achievement, language comprehension, and expressive language skills, as well as students’ interest in reading, attitudes toward reading, and level of attention in the classroom, according to a research summary by the National Literacy Trust.\n",
-       "“When parents become involved at school by, for example, attending events such as open houses or volunteering in the classroom, they build social networks that can provide useful information, connections to school personnel (e.g., teachers), or strategies for enhancing children’s achievement,” the APA research review said. “In turn, parents with heightened social capital are better equipped to support their children in succeeding in school as they are able to ...<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Node ID:** 7f79053f-df5e-46e6-a1da-df61d3c01f06<br>**Similarity:** 0.8761169484326965<br>**Text:** However, there has been little investigation of the mechanisms that explain this association. The present study examines two potential mechanisms of this association: the child's perception of cognitive competence and the quality of the student-teacher relationship. This study used a sample of 158 seven-year old participants, their mothers, and their teachers. Results indicated a statistically significant association between parent involvement and a child's academic performance, over and above the impact of the child's intelligence. A multiple mediation model indicated that the child's perception of cognitive competence fully mediated the relation between parent involvement and the child's performance on a standardized achievement test. The quality of the student-teacher relationship fully mediated the relation between parent involvement and teacher ratings of the child's classroom academic performance. Limitations, future research directions, and implications for public policy initiatives were discussed.\n",
-       "Parent involvement and student academic performance: A multiple mediational analysis\n",
-       "Parent involvement in a child's early education is consistently found to be positively associated with a child's academic performance (Hara & Burke, 1998; Hill & Craft, 2003; Marcon, 1999; Stevenson & Baker, 1987). Specifically, children whose parents are more involved in their education have higher levels of academic performance than children whose parents are involved to a lesser degree...<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Node ID:** 8c07bea5-f093-433f-b023-e53b9cbcfb7a<br>**Similarity:** 0.8752678831050528<br>**Text:** Coupled with these findings of the importance of early academic success, a child's academic success has been found to be relatively stable after early elementary school (Entwisle & Hayduk, 1988; Pedersen, Faucher, & Eaton, 1978). Therefore, it is important to examine factors that contribute to early academic success and that are amenable to change.\n",
-       "Researchers have reported that parent-child interactions, specifically stimulating and responsive parenting practices, are important influences on a child's academic development (Christian, Morrison, & Bryant, 1998; Committee on Early Childhood Pedagogy, 2000). By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance. While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
-       "Models of Parent Involvement\n",
-       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive at...<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Node ID:** 9ba9c132-1540-4cdc-884e-7058f5eb00bd<br>**Similarity:** 0.8653597514634583<br>**Text:** Parent involvement changes social-emotional outcomes, too\n",
-       "The APA study showed that not only does parental involvement lead to improved academic outcomes, but it also has a positive impact on students’ social and emotional skills and decreases instances of delinquency.\n",
-       "That finding also applies internationally.\n",
-       "A 2014 International Education Studies report on parental involvement among 9th and 10th graders in Jordan showed that parental involvement had a positive impact on students’ emotional engagement in school. That means students with more involved parents are more likely to have fun, enjoy school, have high self-esteem, and perceive school as a satisfying experience.\n",
-       "And when parents visit their children’s school, that contributes to a sense of safety among the students, ultimately improving school engagement, the study said. Although conducted in Jordan, the study provides insight into how parental involvement affects students’ social-emotional development in other countries, including the United States.\n",
-       "Parent involvement also gives teachers the tools to better support their students, Borrello said.\n",
-       "“When teachers understand what their students are going through personally and at home and any challenges they may have, then that improves their teaching,” he said. “They’re able to support their student in ways they wouldn’t be able to otherwise.”\n",
-       "See Also\n",
-       "3. Not all parental involvement is created equal\n",
-       "Different levels and types of parent involvement led to varying o...<br>"
+       "And research shows that parent involvement with reading activities has a positive impact on reading achievement, language comprehension, and expressive language skills, as well as students’ interest in reading, attitudes toward reading, and level of attention in the classroom, according to a research summary by the National Literacy Trust.<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
