--- a/tavily.ipynb
+++ b/tavily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import shutil\n",
     "import os\n",
     "\n",
-    "tavily = TavilyClient(api_key=os.getenv('TAVILY_API_KEY'))\n",
+    "# tavily = TavilyClient(api_key=os.getenv('TAVILY_API_KEY'))\n",
+    "tavily = TavilyClient(api_key='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')\n",
     "\n",
     "response = tavily.search(query=query, \n",
     "                         search_depth=\"advanced\", \n",
@@ -312,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
